--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,23 @@ under the License.
 			<version>${flink.version}</version>
 		<!--	<scope>provided</scope> -->
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.terrier/terrier-core -->
+		<dependency>
+		    <groupId>org.terrier</groupId>
+		    <artifactId>terrier-core</artifactId>
+		    <version>5.6</version>
+		    <exclusions>
+		        <exclusion>  <!-- declare the exclusion here -->
+		          <groupId>com.fasterxml.jackson.core</groupId>
+		          <artifactId>jackson-core</artifactId>
+		        </exclusion>
+		        <exclusion>  <!-- declare the exclusion here -->
+		          <groupId>com.fasterxml.jackson.core</groupId>
+		          <artifactId>jackson-databind</artifactId>
+		        </exclusion>
+		      </exclusions> 
+		</dependency>
 
 		<!-- Add connector dependencies here. They must be in the default scope (compile). -->
 
