--- a/.classpath
+++ b/.classpath
@@ -52,5 +52,14 @@
 	<classpathentry kind="var" path="M2_REPO/org/apache/flink/flink-connector-twitter_2.11/1.13.6/flink-connector-twitter_2.11-1.13.6.jar" sourcepath="M2_REPO/org/apache/flink/flink-connector-twitter_2.11/1.13.6/flink-connector-twitter_2.11-1.13.6-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-log4j12/1.7.7/slf4j-log4j12-1.7.7.jar" sourcepath="M2_REPO/org/slf4j/slf4j-log4j12/1.7.7/slf4j-log4j12-1.7.7-sources.jar"/>
 	<classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.17/log4j-1.2.17.jar" sourcepath="M2_REPO/log4j/log4j/1.2.17/log4j-1.2.17-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vpsqu/.m2/repository/org/terrier/terrier-core/5.6/terrier-core-5.6.jar" sourcepath="C:/Users/vpsqu/.m2/repository/org/terrier/terrier-core/5.6/terrier-core-5.6-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="org.terrier"/>
+			<attribute name="maven.artifactId" value="terrier-core"/>
+			<attribute name="maven.version" value="5.6"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
